# event-sorcery

./: AGENTS.md  Cargo.toml  README.md  SPEC.md  flake.nix
.github/workflows/: ci.yaml
adrs/: 0002-consumer-services-to-jobs-migration.md  0004-event-sourced-job-backend.md  0004-per-aggregate-command-serialization.md  0005-bounded-per-aggregate-lock-table.md
crates/event-sorcery/: Cargo.toml
crates/event-sorcery/src/: dependency.rs  job.rs  lib.rs  lifecycle.rs  projection.rs  reactor.rs  schema_registry.rs  sqlite_event_repository.rs  testing.rs  view_backend.rs  wire.rs
crates/sqlite-es/: Cargo.toml
crates/sqlite-es/src/: event_repository.rs  sql_query.rs  testing.rs  view_repository.rs
docs/: cqrs.md  domain.md  event-sourced-job-backend.md  sqlx.md
examples/: README.md
examples/complex/: Cargo.toml
examples/complex/src/: audit_log.rs  inventory.rs  main.rs  order.rs
examples/projection/: README.md  main.rs
examples/simple/: Cargo.toml  README.md
examples/simple/src/: main.rs  support_ticket.rs
