[workspace]
members = ["crates/sqlite-es", "crates/event-sorcery"]
exclude = ["examples/simple", "examples/complex"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
homepage = "https://github.com/ST0x-Technology/event-sorcery"

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
enum_glob_use = "allow"

# `priority = -1` allows lints enabled by a group to be re-disabled.
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

doc_markdown = "allow"
items_after_statements = "allow"
missing_const_for_fn = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"

[workspace.dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
cqrs-es = "0.4.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlite-es = { path = "crates/sqlite-es" }
sqlx = { version = "0.8.6", features = [
  "sqlite",
  "chrono",
  "runtime-tokio-rustls",
] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
